@@ -10,7 +10,7 @@
 
     <groupId>io.trino</groupId>
     <artifactId>trino-root</artifactId>
-    <version>364-SNAPSHOT</version>
+    <version>365-SNAPSHOT</version>
 
     <name>trino-root</name>
     <description>Trino</description>
@@ -53,6 +53,7 @@
         <dep.packaging.version>${dep.airlift.version}</dep.packaging.version>
         <dep.aws-sdk.version>1.12.85</dep.aws-sdk.version>
         <dep.okhttp.version>3.14.9</dep.okhttp.version>
+        <dep.jsonwebtoken.version>0.11.2</dep.jsonwebtoken.version>
         <dep.oracle.version>19.3.0.0</dep.oracle.version>
         <dep.drift.version>1.14</dep.drift.version>
         <dep.scribejava.version>6.9.0</dep.scribejava.version>
@@ -60,13 +61,16 @@
         <dep.tempto.version>186</dep.tempto.version>
         <dep.gcs.version>2.0.0</dep.gcs.version>
         <dep.errorprone.version>2.9.0</dep.errorprone.version>
-        <dep.testcontainers.version>1.16.0</dep.testcontainers.version>
-        <dep.docker-java.version>3.2.11</dep.docker-java.version>
+        <dep.testcontainers.version>1.16.2</dep.testcontainers.version>
+        <dep.docker-java.version>3.2.12</dep.docker-java.version>
         <dep.coral.version>1.0.120</dep.coral.version>
         <dep.confluent.version>5.5.2</dep.confluent.version>
-        <!-- TODO: update after moving to Airbase 112 -->
-        <dep.jackson.version>2.12.3</dep.jackson.version>
         <dep.parquet.version>1.11.1</dep.parquet.version>
+
+        <!-- TODO(https://github.com/airlift/airbase/pull/281): Required by testcontainers, remove when pulled from Airbase -->
+        <dep.slf4j.version>1.7.32</dep.slf4j.version>
+
+        <dep.docker.images.version>50</dep.docker.images.version>
 
         <!--
           America/Bahia_Banderas has:
@@ -153,7 +157,6 @@
         <module>service/trino-proxy</module>
         <module>service/trino-verifier</module>
         <module>testing/trino-benchmark</module>
-        <module>testing/trino-benchmark-driver</module>
         <module>testing/trino-benchto-benchmarks</module>
         <module>testing/trino-product-tests</module>
         <module>testing/trino-product-tests-launcher</module>
@@ -536,7 +539,7 @@
             <dependency>
                 <groupId>io.trino.benchto</groupId>
                 <artifactId>benchto-driver</artifactId>
-                <version>0.15</version>
+                <version>0.16</version>
             </dependency>
 
             <dependency>
@@ -548,7 +551,7 @@
             <dependency>
                 <groupId>io.trino.hadoop</groupId>
                 <artifactId>hadoop-apache</artifactId>
-                <version>3.2.0-14</version>
+                <version>3.2.0-15</version>
             </dependency>
 
             <dependency>
@@ -1233,8 +1236,20 @@
 
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>0.9.0</version>
+                <artifactId>jjwt-api</artifactId>
+                <version>${dep.jsonwebtoken.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${dep.jsonwebtoken.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${dep.jsonwebtoken.version}</version>
             </dependency>
 
             <!-- io.confluent:kafka-avro-serializer uses multiple versions of this transitive dependency -->
@@ -1261,6 +1276,12 @@
                 <groupId>javax.xml.bind</groupId>
                 <artifactId>jaxb-api</artifactId>
                 <version>2.3.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13.2</version>
             </dependency>
 
             <dependency>
@@ -1298,7 +1319,7 @@
             <dependency>
                 <groupId>org.alluxio</groupId>
                 <artifactId>alluxio-shaded-client</artifactId>
-                <version>2.4.0</version>
+                <version>2.6.2</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -1334,7 +1355,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
-                <version>1.20</version>
+                <version>1.21</version>
             </dependency>
 
             <dependency>
@@ -1402,12 +1423,6 @@
 
             <dependency>
                 <groupId>org.jdbi</groupId>
-                <artifactId>jdbi</artifactId>
-                <version>2.78</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jdbi</groupId>
                 <artifactId>jdbi3-bom</artifactId>
                 <type>pom</type>
                 <version>3.23.0</version>
@@ -1453,7 +1468,7 @@
             <dependency>
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
-                <version>6.2.1</version>
+                <version>9.1</version>
             </dependency>
 
             <dependency>
@@ -1465,7 +1480,7 @@
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
-                <version>42.2.23</version>
+                <version>42.3.1</version>
             </dependency>
 
             <dependency>
@@ -1707,54 +1722,45 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <!--suppress MavenModelInspection -->
                         <configuration combine.children="merge">
+                            <!-- forking required for JDK 16: https://errorprone.info/docs/installation -->
+                            <fork>true</fork>
                             <compilerArgs>
                                 <arg>-XDcompilePolicy=simple</arg>
-                                <!-- TODO enable more checks, i.e. remove "-XepDisableAllChecks" -->
                                 <arg>
-                                    -Xplugin:ErrorProne
+                                    -Xplugin:ErrorProne \
+                                    <!-- -Xep:ReferenceEquality:OFF fails in IDEA --> \
+                                    <!-- -Xep:BoxedPrimitiveEquality:OFF fails in IDEA --> \
+                                    -Xep:GuardedBy:OFF <!-- needs some careful inspection --> \
+                                    -Xep:HashtableContains:OFF <!-- https://github.com/trinodb/trino/pull/7001 --> \
+                                    -Xep:BadInstanceof:ERROR \
+                                    -Xep:BoxedPrimitiveConstructor:ERROR \
+                                    -Xep:ClassCanBeStatic:ERROR \
+                                    -Xep:CompareToZero:ERROR \
+                                    -Xep:EqualsIncompatibleType:ERROR \
+                                    -Xep:FallThrough:ERROR \
+                                    -Xep:ImmutableSetForContains:ERROR \
+                                    -Xep:InconsistentHashCode:ERROR \
+                                    -Xep:InjectOnConstructorOfAbstractClass:ERROR \
+                                    -Xep:MissingCasesInEnumSwitch:ERROR \
+                                    -Xep:MissingOverride:ERROR \
+                                    -Xep:NullOptional:ERROR \
+                                    -Xep:ObjectToString:ERROR \
+                                    -Xep:UnnecessaryMethodReference:ERROR \
+                                    -Xep:UnnecessaryOptionalGet:ERROR \
+                                    -Xep:UnusedVariable:ERROR \
+                                    -Xep:UseEnumSwitch:ERROR \
                                     -XepExcludedPaths:.*/target/generated-(|test-)sources/.*
-                                    -XepDisableAllChecks
-                                    -Xep:ArrayEquals:ERROR
-                                    -Xep:ArrayHashCode:ERROR
-                                    -Xep:ArrayToString:ERROR
-                                    -Xep:ArraysAsListPrimitiveArray:ERROR
-                                    -Xep:BadInstanceof:ERROR
-                                    -Xep:BadShiftAmount:ERROR
-                                    -Xep:BoxedPrimitiveConstructor:ERROR
-                                    -Xep:CheckReturnValue:ERROR
-                                    -Xep:ClassCanBeStatic:ERROR
-                                    -Xep:CompareToZero:ERROR
-                                    -Xep:ComparingThisWithNull:ERROR
-                                    -Xep:EqualsIncompatibleType:ERROR
-                                    -Xep:FallThrough:ERROR
-                                    -Xep:FormatString:ERROR
-                                    -Xep:FormatStringAnnotation:ERROR
-                                    -Xep:GetClassOnAnnotation:ERROR
-                                    -Xep:GetClassOnClass:ERROR
-                                    -Xep:IdentityBinaryExpression:ERROR
-                                    -Xep:ImmutableSetForContains:ERROR
-                                    -Xep:InconsistentHashCode:ERROR
-                                    -Xep:InjectOnConstructorOfAbstractClass:ERROR
-                                    -Xep:MissingCasesInEnumSwitch:ERROR
-                                    -Xep:MissingOverride:ERROR
-                                    -Xep:MisusedWeekYear:ERROR
-                                    -Xep:NullOptional:ERROR
-                                    -Xep:ObjectToString:ERROR
-                                    -Xep:OptionalEquality:ERROR
-                                    -Xep:OptionalMapUnusedValue:ERROR
-                                    -Xep:PreconditionsInvalidPlaceholder:ERROR
-                                    -Xep:ReturnValueIgnored:ERROR
-                                    -Xep:SelfAssignment:ERROR
-                                    -Xep:StreamToString
-                                    -Xep:StaticQualifiedUsingExpression:ERROR
-                                    -Xep:ThrowIfUncheckedKnownChecked:ERROR
-                                    -Xep:UnnecessaryCheckNotNull:ERROR
-                                    -Xep:UnnecessaryMethodReference:ERROR
-                                    -Xep:UnnecessaryOptionalGet:ERROR
-                                    -Xep:UnusedVariable:ERROR
-                                    -Xep:UseEnumSwitch:ERROR
-                                    -Xep:ZoneIdOfZ:ERROR
                                 </arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                             </compilerArgs>
                             <annotationProcessorPaths>
                                 <path>
